--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
   font-size: 16px;
   line-height: 1.2;
   color: #434343;
-  width: 300px;
+  width: 280px;
   font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
   margin: 20px;
   padding: 20px;
@@ -25,13 +25,13 @@ body {
 .md-list__title {
   font-size: 20px;
   font-weight: 400;
-  margin: 0 0 1em;
+  margin: 0 0 20px;
 }
 .md-list__form {
   width: 100%;
 }
 .md-list__group {
-  margin: 1em 0;
+  margin: 20px 0;
 }
 .md-list__group--flex {
   display: -webkit-flex;
